// Copyright (c) 2019 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";
package rewardingpb;

message Admin {
    string blockReward = 1;
    string epochReward = 2;
    uint64 numDelegatesForEpochReward = 3;
    string bootstrapBonus = 4;
    uint64 numDelegatesForBootstrapBonus = 5;
    uint64 bootstrapBonusLastEpoch = 6;
}

message Fund {
    string totalBalance = 1;
    string unclaimedBalance = 2;
}

message RewardHistory {
}

message Account {
    string balance = 1;
}

message Exempt {
    repeated bytes addrs = 1;
}